--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 
 <section id="head">
-<div class="container-fluid">
+<div class="container">
 <img class="logo "src="images\logo.svg" alt="">
 <h1 class="head-h">A history of everything you copy</h1>
 <p class="head-p" >Clipboard allows you to track and organize everything you
